Handle null location

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,7 +18,7 @@ profile.set.button.match.age.to=Max age
 profile.set.button.done=No more changes needed
 profile.set.callback=Anything else?
 profile.set.location=Your location is updated, I'll let others know
-profile.set.location.error=Something went wrong
+profile.set.location.error=Can't parse your location, try to send it again
 profile.validate.number=Respond with a number please
 profile.validate.contact=I don't believe you
 profile.set.greeting=Now, who are we looking for?
