--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,10 @@
 unknown_command=Unrecognized command. Try asking for /help
 help=Hi! Type /profile to set up your profile, or try a button below!
 help.button.title=What is This?
-description=This is just a Demo! Try another button
+description=This is a tinder-like application built with java! \n\
+  Fill your /profile, \n\
+  send me location \n\
+  and you're ready to /roll and find someone nearby!
 match.on.mutual.like=Hey, {0} is interested in you!
 match.button.like=👍
 match.button.dislike=👎
@@ -19,8 +22,9 @@ profile.set.button.done=No more changes needed
 profile.set.callback=Anything else?
 profile.set.location=Your location is updated, I'll let others know
 profile.set.location.error=Can't parse your location, try to send it again
+profile.set.remind.to.update.location=Don't forget to send me a location!
 profile.validate.number=Respond with a number please
-profile.validate.contact=I don't believe you
+profile.validate.contact=I don't believe you, you sure that's your phone number?
 profile.set.greeting=Now, who are we looking for?
 profile.set.photo=Updated your photo!
 profile.cleared=Your profile was cleared, want some /help?
