Extract more strings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ description=This is a tinder-like application built with java! \n\
 match.on.mutual.like=Hey, {0} is interested in you!
 match.button.like=👍
 match.button.dislike=👎
+match.no.one.is.around=Sorry, no one new is around
 profile.share.phone.alert=Share your phone number first!
 profile.share.phone.share_button=Share phone
 profile.you.prefix=You are:
