Handle null location

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ match.on.mutual.like=Hey, {0} is interested in you!
 match.button.like=👍
 match.button.dislike=👎
 match.no.one.is.around=Sorry, no one new is around
+match.your.location.not.shared=Share your location first!
 profile.share.phone.alert=Share your phone number first!
 profile.share.phone.share_button=Share phone
 profile.you.prefix=You are:
