--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,6 +10,7 @@ match.button.like=👍
 match.button.dislike=👎
 match.no.one.is.around=Sorry, no one new is around
 match.your.location.not.shared=Share your location first!
+match.nothing.to.undo=Nothing to undo
 profile.share.phone.alert=Share your phone number first!
 profile.share.phone.share_button=Share phone
 profile.you.prefix=You are:
